Finalised docker-compose tests

--- a/asynch-request-reader-bdd/src/main/resources/application.properties
+++ b/asynch-request-reader-bdd/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://mysql-server:3306/cucumber?useSSL=false
+#spring.datasource.url=jdbc:mysql://mysql-server:3306/cucumber
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
+spring.datasource.allowPublicKeyRetrieval=true
 
 spring.rabbitmq.host=rabbitmq-spring-boot
 
