--- a/asynch-request-reader-bdd/pom.xml
+++ b/asynch-request-reader-bdd/pom.xml
@@ -37,10 +37,13 @@
 
         <!-- Use MySQL Connector-J -->
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <!--<version>8.0.9-rc</version>-->
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
