Added health check

--- a/asynch-request-creator-bdd/pom.xml
+++ b/asynch-request-creator-bdd/pom.xml
@@ -64,13 +64,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Wiremock-->
-        <!-- https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock -->
-       <!-- <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>2.13.0</version>
-        </dependency>-->
+        <!-- Actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
     </dependencies>
 
