--- a/asynch-request-creator-bdd/pom.xml
+++ b/asynch-request-creator-bdd/pom.xml
@@ -121,7 +121,7 @@
                 </executions>
                 <configuration>
                     <repository>vic/asynch-request-creator</repository>
-                    <tag>${project.version}</tag>
+                    <tag>0.0.1</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
