--- a/asynch-request-reader-bdd/pom.xml
+++ b/asynch-request-reader-bdd/pom.xml
@@ -150,7 +150,7 @@
                 </executions>
                 <configuration>
                     <repository>vic/asynch-request-reader</repository>
-                    <tag>${project.version}</tag>
+                    <tag>0.0.1</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
