Using tag 0.0.1 for everything

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,23 +2,23 @@ version: '3.4'
 
 services:
    asynch-request-creator:
-      image: "vic/asynch-request-creator:1.0-SNAPSHOT"
+      image: "vic/asynch-request-creator:0.0.1"
       ports:
           - "8010:8010"
 
    asynch-request-reader:
-     image: "vic/asynch-request-reader:1.0-SNAPSHOT"
+     image: "vic/asynch-request-reader:0.0.1"
      ports:
           - "8020:8020"
 
    rabbitmq-spring-boot:
-     image: "rabbitmq-spring-boot"
+     image: "rabbitmq-spring-boot:0.0.1"
      ports:
          - "5672:5672"
          - "15672:15672"
 
    mysql-server:
-     image: "mysql-cucumber:latest"
+     image: "mysql-cucumber:0.0.1"
      restart: always
      environment:
           - MYSQL_ROOT_PASSWORD=devpassword
