--- a/asynch-request-creator-bdd/pom.xml
+++ b/asynch-request-creator-bdd/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.failsafe.plugin>2.20.1</maven.failsafe.plugin>
+        <maven.failsafe.plugin>3.0.0-M3</maven.failsafe.plugin>
         <dockerfile-maven-version>1.3.7</dockerfile-maven-version>
     </properties>
 
