--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,17 +5,30 @@ services:
       image: "vic/asynch-request-creator:0.0.1"
       ports:
           - "8010:8010"
+      networks: 
+         default:
+            aliases:
+               - asynch-request-creator
 
    asynch-request-reader:
      image: "vic/asynch-request-reader:0.0.1"
      ports:
           - "8020:8020"
+     networks: 
+         default:
+            aliases:
+               - asynch-request-reader
+
 
    rabbitmq-spring-boot:
      image: "rabbitmq-spring-boot:0.0.1"
      ports:
          - "5672:5672"
          - "15672:15672"
+     networks: 
+         default:
+            aliases:
+               - rabbitmq-spring-boot         
 
    mysql-server:
      image: "mysql-cucumber:0.0.1"
@@ -24,3 +37,7 @@ services:
           - MYSQL_ROOT_PASSWORD=devpassword
      ports:
           - "3306:3306"
+     networks: 
+         default:
+            aliases:
+               - mysql-server
